--- a/index.html
+++ b/index.html
@@ -10,7 +10,23 @@
 </head>
 <body>
     <header>
-        <div class="container"></div>
+        <div class="container">
+            <img src="images/images/paz_logo.png" alt="">
+            <img src="images/images/menu_home.png" alt="">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#">אודות</a>
+                        <a href="#">חטיבות</a>
+                        <a href="#">אחריות תאגידית</a>                         
+                        <a href="#">קשרי משקיעים</a>
+                        <a href="#">התחנות שלנו</a>
+                        <a href="#">קריירה</a>
+                        <a href="#">חדשות ומדיה</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main class="container">
 
