--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -15,14 +17,71 @@
             <img src="images/images/menu_home.png" alt="">
             <nav>
                 <ul>
-                    <li>
-                        <a href="#">אודות</a>
-                        <a href="#">חטיבות</a>
-                        <a href="#">אחריות תאגידית</a>                         
-                        <a href="#">קשרי משקיעים</a>
-                        <a href="#">התחנות שלנו</a>
-                        <a href="#">קריירה</a>
-                        <a href="#">חדשות ומדיה</a>
+                    <li class="dropdown">
+                        <a href="javascript:void(0)" class="dropbtn">אודות</a>
+                        <div class="dropdown-content">
+                            <a href="#">אודות</a>
+                            <a href="#">היסטוריה</a>
+                            <a href="#">חזון וערכים</a>
+                            <a href="#">מבנה הקבוצה</a>
+                            <a href="#">חברי דירקטוריון</a>
+                            <a href="#">הנהלת הקבוצה</a>
+                            <a href="#">פרסים והוקרה</a>
+                        </div>
+                    </li>
+                    <li class="dropdown">
+                        <a href="javascript:void(0)" class="dropbtn">חטיבות</a>
+                        <div class="dropdown-content">
+                            <a href="#">חטיבות</a>
+                            <a href="#">קמעונאות ומסחר</a>
+                            <a href="#">תעשיות ושירותים</a>
+                            <a href="#">זיקוק</a>
+                        </div>
+                    </li>
+                    <li class="dropdown">
+                        <a href="javascript:void(0)" class="dropbtn">אחריות תאגידית</a>
+                        <div class="dropdown-content">
+                            <a href="#">אחריות תאגידית</a>
+                            <a href="#">הקוד האתי</a>
+                            <a href="#">מעורבות חברתית</a>
+                            <a href="#">נגישות</a>
+                            <a href="#">איכות הסביבה ובטיחות</a>
+                            <a href="#">דירוג מעלה</a>
+                        </div>
+                    </li>
+                    <li class="dropdown">
+                        <a href="javascript:void(0)" class="dropbtn">קשרי משקיעים</a>
+                        <div class="dropdown-content">
+                            <a href="#">פרופיל חברה</a>
+                            <a href="#">דו"חות כספיים</a>
+                            <a href="#">כלים למשקיע</a>
+                            <a href="#">נתוני מניה</a>
+                            <a href="#">אסיפות כלליות</a>
+                        </div>
+                    </li>
+                    <li class="dropdown">
+                        <a href="javascript:void(0)" class="dropbtn">התחנות שלנו</a>
+                        <div class="dropdown-content">
+                            <a href="#">התחנות שלנו</a>
+                            <a href="#">נגישות מתחמי פז</a>
+                            <a href="#">רשימת תחנות</a>
+                            <a href="#">מועדונים</a>
+                        </div>
+                    </li>
+                    <li class="dropdown">
+                        <a href="javascript:void(0)" class="dropbtn">קריירה</a>
+                        <div class="dropdown-content">
+                            <a href="#">לעבוד בפז</a>
+                            <a href="#">ניהול תחנת פז</a>
+                            <a href="#">קריירה</a>
+                        </div>
+                    </li>
+                    <li class="dropdown">
+                        <a href="javascript:void(0)" class="dropbtn">חדשות ומדיה</a>
+                        <div class="dropdown-content">
+                            <a href="#">פרסומות</a>
+                            <a href="#">הודעות לעיתונות</a>
+                        </div>
                     </li>
                 </ul>
             </nav>
@@ -37,4 +96,5 @@
         </div>
     </footer>
 </body>
+
 </html>
