commit4-main-content

--- a/index.html
+++ b/index.html
@@ -87,10 +87,58 @@
             </nav>
         </div>
     </header>
-    <main class="container">
+    <main class="container row">
+        <div class="img-container column">
+            <img src="\images\images\1908364606615453350.JPG">
+            <div class="text-block">
+                <h3>קמעונאות ומסחר</h3>
+                <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות,
+                    יעילות ומובילות. החטיבה פועלת...</p>
+            </div>
+        </div>
+        <div class="img-container column">
+            <img src="\images\images\1908364606615453350.JPG">
+            <div class="text-block">
+                <h3>קמעונאות ומסחר</h3>
+                <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות,
+                    יעילות ומובילות. החטיבה פועלת...</p>
+            </div>
+        </div>
+        <div class="img-container column">
+            <img src="\images\images\1908364606615453350.JPG">
+            <div class="text-block">
+                <h3>קמעונאות ומסחר</h3>
+                <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות,
+                    יעילות ומובילות. החטיבה פועלת...</p>
+            </div>
+        </div>
+        <div class="img-container column">
+            <img src="\images\images\1908364606615453350.JPG">
+            <div class="text-block">
+                <h3>קמעונאות ומסחר</h3>
+                <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות,
+                    יעילות ומובילות. החטיבה פועלת...</p>
+            </div>
+        </div>
+        <div class="img-container column">
+            <img src="\images\images\1908364606615453350.JPG">
+            <div class="text-block">
+                <h3>קמעונאות ומסחר</h3>
+                <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות,
+                    יעילות ומובילות. החטיבה פועלת...</p>
+            </div>
+        </div>
+        <div class="img-container column">
+            <img src="\images\images\1908364606615453350.JPG">
+            <div class="text-block">
+                <h3>קמעונאות ומסחר</h3>
+                <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות,
+                    יעילות ומובילות. החטיבה פועלת...</p>
+            </div>
+        </div>
 
     </main>
-    <footer>
+    <footer class="footer">
         <div class="container">
 
         </div>
