commit5-main-pic-edit

--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
 <body>
     <header>
         <div class="container">
-            <img src="images/images/paz_logo.png" alt="">
-            <img src="images/images/menu_home.png" alt="">
+            <div class=pazlogo>
+                <img src="images/images/paz_logo.png" alt="">
+            </div>
+            <div class="menu_home">
+                <img src="images/images/menu_home.png" alt="">
+            </div>
             <nav>
                 <ul>
                     <li class="dropdown">
@@ -87,53 +91,57 @@
             </nav>
         </div>
     </header>
-    <main class="container row">
-        <div class="img-container column">
-            <img src="\images\images\1908364606615453350.JPG">
-            <div class="text-block">
-                <h3>קמעונאות ומסחר</h3>
-                <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות,
-                    יעילות ומובילות. החטיבה פועלת...</p>
+    <main class="container flexcolumn">
+        <div class="flexrow">
+            <div class="img-container flexcolumn">
+                <img src="\images\images\1908364606615453350.JPG">
+                <div class="text-block">
+                    <h3>קמעונאות ומסחר</h3>
+                    <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
+                        בחדשנות,
+                        יעילות ומובילות. החטיבה פועלת...</p>
+                </div>
+            </div>
+            <div class="img-container flexcolumn">
+                <img src="\images\images\Picture-046410251500.jpg">
+                <div class="text-block">
+                    <h3>זיקוק</h3>
+                    <p>פז זיקוק אשדוד (פז"א) היא חטיבת הזיקוק של קבוצת פז. החטיבה עוסקת בניהול פעילות בית הזיקוק באשדוד, הכוללת ייצור תזקיקי נפט...</p>
+                </div>
+            </div>
+            <div class="img-container flexcolumn">
+                <img src="\images\images\╫ñ╫צ╫º╫¿_-291_354410564000.jpg">
+                <div class="text-block">
+                    <h3>תעשיות ושירותים</h3>
+                    <p>תחת חטיבת התעשיות והשירותים של פז פועלות מספר חברות בנות, המתמחות בפיתוח, ייצור ושיווק מוצרי לוואי של נפט, ומובילות את השוק...</p>
+                </div>
             </div>
         </div>
-        <div class="img-container column">
-            <img src="\images\images\1908364606615453350.JPG">
-            <div class="text-block">
-                <h3>קמעונאות ומסחר</h3>
-                <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות,
-                    יעילות ומובילות. החטיבה פועלת...</p>
+        <div class="flexrow">
+            <div class="img-container flexcolumn">
+                <img src="\images\images\1908364606615453350.JPG">
+                <div class="text-block">
+                    <h3></h3>
+                    <p></p>
+                </div>
             </div>
-        </div>
-        <div class="img-container column">
-            <img src="\images\images\1908364606615453350.JPG">
-            <div class="text-block">
-                <h3>קמעונאות ומסחר</h3>
-                <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות,
-                    יעילות ומובילות. החטיבה פועלת...</p>
+            <div class="img-container flexcolumn">
+                <img src="\images\images\1908364606615453350.JPG">
+                <div class="text-block">
+                    <h3>קמעונאות ומסחר</h3>
+                    <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
+                        בחדשנות,
+                        יעילות ומובילות. החטיבה פועלת...</p>
+                </div>
             </div>
-        </div>
-        <div class="img-container column">
-            <img src="\images\images\1908364606615453350.JPG">
-            <div class="text-block">
-                <h3>קמעונאות ומסחר</h3>
-                <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות,
-                    יעילות ומובילות. החטיבה פועלת...</p>
-            </div>
-        </div>
-        <div class="img-container column">
-            <img src="\images\images\1908364606615453350.JPG">
-            <div class="text-block">
-                <h3>קמעונאות ומסחר</h3>
-                <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות,
-                    יעילות ומובילות. החטיבה פועלת...</p>
-            </div>
-        </div>
-        <div class="img-container column">
-            <img src="\images\images\1908364606615453350.JPG">
-            <div class="text-block">
-                <h3>קמעונאות ומסחר</h3>
-                <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות,
-                    יעילות ומובילות. החטיבה פועלת...</p>
+            <div class="img-container flexcolumn">
+                <img src="\images\images\1908364606615453350.JPG">
+                <div class="text-block">
+                    <h3>קמעונאות ומסחר</h3>
+                    <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
+                        בחדשנות,
+                        יעילות ומובילות. החטיבה פועלת...</p>
+                </div>
             </div>
         </div>
 
