commit6-fix-jpgcapslock

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <main class="container flexcolumn">
         <div class="flexrow">
             <div class="img-container flexcolumn">
-                <img src="\images\images\1908364606615453350.JPG">
+                <img src="\images\images\1908364606615453350.jpg">
                 <div class="text-block">
                     <h3>קמעונאות ומסחר</h3>
                     <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
@@ -106,27 +106,31 @@
                 <img src="\images\images\Picture-046410251500.jpg">
                 <div class="text-block">
                     <h3>זיקוק</h3>
-                    <p>פז זיקוק אשדוד (פז"א) היא חטיבת הזיקוק של קבוצת פז. החטיבה עוסקת בניהול פעילות בית הזיקוק באשדוד, הכוללת ייצור תזקיקי נפט...</p>
+                    <p>פז זיקוק אשדוד (פז"א) היא חטיבת הזיקוק של קבוצת פז. החטיבה עוסקת בניהול פעילות בית הזיקוק באשדוד,
+                        הכוללת ייצור תזקיקי נפט...</p>
                 </div>
             </div>
             <div class="img-container flexcolumn">
                 <img src="\images\images\╫ñ╫צ╫º╫¿_-291_354410564000.jpg">
                 <div class="text-block">
                     <h3>תעשיות ושירותים</h3>
-                    <p>תחת חטיבת התעשיות והשירותים של פז פועלות מספר חברות בנות, המתמחות בפיתוח, ייצור ושיווק מוצרי לוואי של נפט, ומובילות את השוק...</p>
+                    <p>תחת חטיבת התעשיות והשירותים של פז פועלות מספר חברות בנות, המתמחות בפיתוח, ייצור ושיווק מוצרי
+                        לוואי של נפט, ומובילות את השוק...</p>
                 </div>
             </div>
         </div>
         <div class="flexrow">
             <div class="img-container flexcolumn">
-                <img src="\images\images\1908364606615453350.JPG">
+                <img src="\images\images\small_cube_bg.png">
+                <img src="\images\images\1908364606615453350.jpg">
                 <div class="text-block">
                     <h3></h3>
                     <p></p>
                 </div>
             </div>
             <div class="img-container flexcolumn">
-                <img src="\images\images\1908364606615453350.JPG">
+                <img src="\images\images\small_cube_bg.png">
+                <img src="\images\images\1908364606615453350.jpg">
                 <div class="text-block">
                     <h3>קמעונאות ומסחר</h3>
                     <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
@@ -135,7 +139,8 @@
                 </div>
             </div>
             <div class="img-container flexcolumn">
-                <img src="\images\images\1908364606615453350.JPG">
+                <img src="\images\images\small_cube_bg.png">
+                <img src="\images\images\1908364606615453350.jpg">
                 <div class="text-block">
                     <h3>קמעונאות ומסחר</h3>
                     <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
