--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <main class="container flexcolumn">
         <div class="flexrow">
             <div class="img-container flexcolumn">
-                <img src="\images\images\1908364606615453350.jpg">
+                <img src="images/images/1908364606615453350.jpg">
                 <div class="text-block">
                     <h3>קמעונאות ומסחר</h3>
                     <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
@@ -103,7 +103,7 @@
                 </div>
             </div>
             <div class="img-container flexcolumn">
-                <img src="\images\images\Picture-046410251500.jpg">
+                <img src="images/images/Picture-046410251500.jpg">
                 <div class="text-block">
                     <h3>זיקוק</h3>
                     <p>פז זיקוק אשדוד (פז"א) היא חטיבת הזיקוק של קבוצת פז. החטיבה עוסקת בניהול פעילות בית הזיקוק באשדוד,
@@ -111,7 +111,7 @@
                 </div>
             </div>
             <div class="img-container flexcolumn">
-                <img src="\images\images\╫ñ╫צ╫º╫¿_-291_354410564000.jpg">
+                <img src="images/images/╫ñ╫צ╫º╫¿_-291_354410564000.jpg">
                 <div class="text-block">
                     <h3>תעשיות ושירותים</h3>
                     <p>תחת חטיבת התעשיות והשירותים של פז פועלות מספר חברות בנות, המתמחות בפיתוח, ייצור ושיווק מוצרי
@@ -120,17 +120,15 @@
             </div>
         </div>
         <div class="flexrow">
-            <div class="img-container flexcolumn">
-                <img src="\images\images\small_cube_bg.png">
-                <img src="\images\images\1908364606615453350.jpg">
+            <div class="img-container flexcolumn back">
+                <img src="">
                 <div class="text-block">
                     <h3></h3>
                     <p></p>
                 </div>
             </div>
-            <div class="img-container flexcolumn">
-                <img src="\images\images\small_cube_bg.png">
-                <img src="\images\images\1908364606615453350.jpg">
+            <div class="img-container flexcolumn back">
+                <img src="images/images/1908364606615453350.jpg">
                 <div class="text-block">
                     <h3>קמעונאות ומסחר</h3>
                     <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
@@ -138,9 +136,8 @@
                         יעילות ומובילות. החטיבה פועלת...</p>
                 </div>
             </div>
-            <div class="img-container flexcolumn">
-                <img src="\images\images\small_cube_bg.png">
-                <img src="\images\images\1908364606615453350.jpg">
+            <div class="img-container flexcolumn back">
+                <img src="images/images/1908364606615453350.jpg">
                 <div class="text-block">
                     <h3>קמעונאות ומסחר</h3>
                     <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
