--- a/index.html
+++ b/index.html
@@ -20,75 +20,81 @@
                 <img src="images/images/menu_home.png" alt="">
             </div>
             <nav>
-                <ul>
+                <ul class="ulnav">
                     <li class="dropdown">
                         <a href="javascript:void(0)" class="dropbtn">אודות</a>
                         <div class="dropdown-content">
-                            <a href="#">אודות</a>
-                            <a href="#">היסטוריה</a>
-                            <a href="#">חזון וערכים</a>
-                            <a href="#">מבנה הקבוצה</a>
-                            <a href="#">חברי דירקטוריון</a>
-                            <a href="#">הנהלת הקבוצה</a>
-                            <a href="#">פרסים והוקרה</a>
+                            <a class="indiv" href="#">אודות</a>
+                            <a class="indiv" href="#">היסטוריה</a>
+                            <a class="indiv" href="#">חזון וערכים</a>
+                            <a class="indiv" href="#">מבנה הקבוצה</a>
+                            <a class="indiv" href="#">חברי דירקטוריון</a>
+                            <a class="indiv" href="#">הנהלת הקבוצה</a>
+                            <a class="indiv" href="#">פרסים והוקרה</a>
                         </div>
                     </li>
                     <li class="dropdown">
                         <a href="javascript:void(0)" class="dropbtn">חטיבות</a>
                         <div class="dropdown-content">
-                            <a href="#">חטיבות</a>
-                            <a href="#">קמעונאות ומסחר</a>
-                            <a href="#">תעשיות ושירותים</a>
-                            <a href="#">זיקוק</a>
+                            <a class="indiv" href="#">חטיבות</a>
+                            <a class="indiv" href="#">קמעונאות ומסחר</a>
+                            <a class="indiv" href="#">תעשיות ושירותים</a>
+                            <a class="indiv" href="#">זיקוק</a>
                         </div>
                     </li>
                     <li class="dropdown">
                         <a href="javascript:void(0)" class="dropbtn">אחריות תאגידית</a>
                         <div class="dropdown-content">
-                            <a href="#">אחריות תאגידית</a>
-                            <a href="#">הקוד האתי</a>
-                            <a href="#">מעורבות חברתית</a>
-                            <a href="#">נגישות</a>
-                            <a href="#">איכות הסביבה ובטיחות</a>
-                            <a href="#">דירוג מעלה</a>
+                            <a class="indiv" href="#">אחריות תאגידית</a>
+                            <a class="indiv" href="#">הקוד האתי</a>
+                            <a class="indiv" href="#">מעורבות חברתית</a>
+                            <a class="indiv" href="#">נגישות</a>
+                            <a class="indiv" href="#">איכות הסביבה ובטיחות</a>
+                            <a class="indiv" href="#">דירוג מעלה</a>
                         </div>
                     </li>
                     <li class="dropdown">
                         <a href="javascript:void(0)" class="dropbtn">קשרי משקיעים</a>
                         <div class="dropdown-content">
-                            <a href="#">פרופיל חברה</a>
-                            <a href="#">דו"חות כספיים</a>
-                            <a href="#">כלים למשקיע</a>
-                            <a href="#">נתוני מניה</a>
-                            <a href="#">אסיפות כלליות</a>
+                            <a class="indiv" href="#">פרופיל חברה</a>
+                            <a class="indiv" href="#">דו"חות כספיים</a>
+                            <a class="indiv" href="#">כלים למשקיע</a>
+                            <a class="indiv" href="#">נתוני מניה</a>
+                            <a class="indiv" href="#">אסיפות כלליות</a>
                         </div>
                     </li>
                     <li class="dropdown">
                         <a href="javascript:void(0)" class="dropbtn">התחנות שלנו</a>
                         <div class="dropdown-content">
-                            <a href="#">התחנות שלנו</a>
-                            <a href="#">נגישות מתחמי פז</a>
-                            <a href="#">רשימת תחנות</a>
-                            <a href="#">מועדונים</a>
+                            <a class="indiv" href="#">התחנות שלנו</a>
+                            <a class="indiv" href="#">נגישות מתחמי פז</a>
+                            <a class="indiv" href="#">רשימת תחנות</a>
+                            <a class="indiv" href="#">מועדונים</a>
                         </div>
                     </li>
                     <li class="dropdown">
                         <a href="javascript:void(0)" class="dropbtn">קריירה</a>
                         <div class="dropdown-content">
-                            <a href="#">לעבוד בפז</a>
-                            <a href="#">ניהול תחנת פז</a>
-                            <a href="#">קריירה</a>
+                            <a class="indiv" href="#">לעבוד בפז</a>
+                            <a class="indiv" href="#">ניהול תחנת פז</a>
+                            <a class="indiv" href="#">קריירה</a>
                         </div>
                     </li>
                     <li class="dropdown">
                         <a href="javascript:void(0)" class="dropbtn">חדשות ומדיה</a>
                         <div class="dropdown-content">
-                            <a href="#">פרסומות</a>
-                            <a href="#">הודעות לעיתונות</a>
+                            <a class="indiv" href="#">פרסומות</a>
+                            <a class="indiv" href="#">הודעות לעיתונות</a>
                         </div>
                     </li>
                 </ul>
             </nav>
+            <a class="english" href="#">English</a>
+            <form class="search" action="search">
+                <input class="search-input" type="search" name="search-bar" id="search-bar"
+                    placeholder="רשום מילת חיפוש">
+                <a class="search-button"><img src="images/images/search_button.png"></a>
+            </form>
         </div>
     </header>
     <main class="container flexcolumn">
@@ -100,6 +106,7 @@
                     <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
                         בחדשנות,
                         יעילות ומובילות. החטיבה פועלת...</p>
+                    <a class="read-more" href="#">קרא עוד <img class="tree" src="images/images/read_more_white.png"></a>
                 </div>
             </div>
             <div class="img-container flexcolumn">
@@ -108,6 +115,7 @@
                     <h3>זיקוק</h3>
                     <p>פז זיקוק אשדוד (פז"א) היא חטיבת הזיקוק של קבוצת פז. החטיבה עוסקת בניהול פעילות בית הזיקוק באשדוד,
                         הכוללת ייצור תזקיקי נפט...</p>
+                    <a class="read-more" href="#">קרא עוד <img class="tree" src="images/images/read_more_white.png"></a>
                 </div>
             </div>
             <div class="img-container flexcolumn">
@@ -116,6 +124,7 @@
                     <h3>תעשיות ושירותים</h3>
                     <p>תחת חטיבת התעשיות והשירותים של פז פועלות מספר חברות בנות, המתמחות בפיתוח, ייצור ושיווק מוצרי
                         לוואי של נפט, ומובילות את השוק...</p>
+                    <a class="read-more" href="#">קרא עוד <img class="tree" src="images/images/read_more_white.png"></a>
                 </div>
             </div>
         </div>
@@ -132,7 +141,7 @@
                 <img class="down" src="images/images/small_cube_bg.png">
                 <div class="textdown">
                     <h3>yellow click&amp;pick;</h3>
-                    <img class="ads" src="images\images\250X110571325734.jpg">
+                    <img class="ads" src="images/images/250X110571325734.jpg">
                     <p></p>
                 </div>
             </div>
@@ -140,8 +149,12 @@
                 <img class="down" src="images/images/small_cube_bg.png">
                 <div class="textdown">
                     <h3>התחנות שלנו בדרך שלך</h3>
-                    <img class="map" src="images\images\Untitled-3058756287.jpg">
-                    <p></p>
+                    <img class="map" src="images/images/Untitled-3058756287.jpg">
+                    <ul class="ulmap">
+                        <li class="limap"><a class="amap" href="#">צפון<img class="imgmap" src="images/images/read_more_yellow.png"></a></li>
+                        <li class="limap"><a class="amap" href="#">מרכז<img class="imgmap" src="images/images/read_more_yellow.png"></a></li>
+                        <li class="limap"><a class="amap" href="#">דרום<img class="imgmap" src="images/images/read_more_yellow.png"></a></li>
+                    </ul>
                 </div>
             </div>
         </div>
