commit11-finish-the-home-page

--- a/connect.html
+++ b/connect.html
@@ -8,12 +8,6 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-    <style>
-    .switch {   
-   display:none;
-   padding-bottom: 12px;
-}
-</style>
 </head>
 
 <body>
@@ -22,7 +16,7 @@
             <div class=pazlogo>
                 <img src="images/images/paz_logo.png" alt="">
             </div>
-            <div class="menu_home">
+            <div class="menu_connect">
                 <img src="images/images/menu_home.png" alt="">
             </div>
             <nav>
@@ -105,95 +99,7 @@
     </header>
     <main class="container flexcolumn">
         <div class="flexrow">
-            <div class="img-container flexcolumn">
-                <img class="up" src="images/images/1908364606615453350.JPG">
-                <div class="text-block">
-                    <h3>קמעונאות ומסחר</h3>
-                    <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
-                        בחדשנות,
-                        יעילות ומובילות. החטיבה פועלת...</p>
-                    <a class="read-more" href="#">קרא עוד <img class="tree" src="images/images/read_more_white.png"><img
-                            class="himgmap" src="images/images/read_more_blue.png"></a>
-                </div>
-            </div>
-            <div class="img-container flexcolumn">
-                <img class="up" src="images/images/Picture-046410251500.jpg">
-                <div class="text-block">
-                    <h3>זיקוק</h3>
-                    <p>פז זיקוק אשדוד (פז"א) היא חטיבת הזיקוק של קבוצת פז. החטיבה עוסקת בניהול פעילות בית הזיקוק באשדוד,
-                        הכוללת ייצור תזקיקי נפט...</p>
-                    <a class="read-more" href="#">קרא עוד <img class="tree" src="images/images/read_more_white.png"><img
-                            class="himgmap" src="images/images/read_more_blue.png"></a>
-                </div>
-            </div>
-            <div class="img-container flexcolumn">
-                <img class="up" src="images/images/╫ñ╫צ╫º╫¿_-291_354410564000.jpg">
-                <div class="text-block">
-                    <h3>תעשיות ושירותים</h3>
-                    <p>תחת חטיבת התעשיות והשירותים של פז פועלות מספר חברות בנות, המתמחות בפיתוח, ייצור ושיווק מוצרי
-                        לוואי של נפט, ומובילות את השוק...</p>
-                    <a class="read-more" href="#">קרא עוד <img class="tree" src="images/images/read_more_white.png"><img
-                            class="himgmap" src="images/images/read_more_blue.png"></a>
-                </div>
-            </div>
-        </div>
-        <div class="flexrow">
-            <div class="img-container flexcolumn">
-                <img class="down" src="images/images/small_cube_bg.png">
-                <div class="textdown">
-                    <h3>כרטיס אשראי שופרסל וכרטיס אשראי יש</h3>
-                    <img class="ads" src="images/images/paz_250x110059890678.jpg">
-                    <li class="limap"><a class="amap" href="#">לפרטים נוספים<img class="imgmap"
-                                src="images/images/read_more_yellow.png"><img class="himgmap"
-                                src="images/images/read_more_blue.png"></a></li>
-                </div>
-            </div>
-            <div class="img-container flexcolumn">
-                <img class="down" src="images/images/small_cube_bg.png">
-                <div class="textdown">
-                    <h3>yellow click&amp;pick;</h3>
-                    <img class="ads switch" src="images/images/250X110571325734.jpg">
-                    <img class="ads switch" src="images/images/paz_250x110103131473.jpg">
-                    <li class="limap"><a class="amap" href="#">לפרטים נוספים<img class="imgmap"
-                                src="images/images/read_more_yellow.png"><img class="himgmap"
-                                src="images/images/read_more_blue.png"></a></li>
-                </div>
-                <script>
-                    var myIndex = 0;
-                    carousel();
-                    
-                    function carousel() {
-                      var i;
-                      var x = document.getElementsByClassName("switch");
-                      for (i = 0; i < x.length; i++) {
-                        x[i].style.display = "none";  
-                      }
-                      myIndex++;
-                      if (myIndex > x.length) {myIndex = 1}    
-                      x[myIndex-1].style.display = "block";  
-                      setTimeout(carousel, 4000); // Change image every 4 seconds
-                    }
-                    </script>
-            </div>
-            <div class="img-container flexcolumn">
-                <img class="down" src="images/images/small_cube_bg.png">
-                <div class="textdown">
-                    <h3>התחנות שלנו בדרך שלך</h3>
-                    <img class="map" src="images/images/Untitled-3058756287.jpg">
-                    <nav>
-                        <ul class="ulmap">
-                            <li class="limap"><a class="amap" href="#">צפון<img class="imgmap"
-                                        src="images/images/read_more_yellow.png"><img class="himgmap"
-                                        src="images/images/read_more_blue.png"></a></li>
-                            <li class="limap"><a class="amap" href="#">מרכז<img class="imgmap"
-                                        src="images/images/read_more_yellow.png"><img class="himgmap"
-                                        src="images/images/read_more_blue.png"></a></li>
-                            <li class="limap"><a class="amap" href="#">דרום<img class="imgmap"
-                                        src="images/images/read_more_yellow.png"><img class="himgmap"
-                                        src="images/images/read_more_blue.png"></a></li>
-                        </ul>
-                    </nav>
-                </div>
+            
             </div>
         </div>
 
