--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 </div>
             </div>
             <div class="img-container flexcolumn">
-                <img class="up" src="images/images/╫ñ╫צ╫º╫¿_-291_354410564000.jpg">
+                <img class="up" src="images/images/291_354410564000.jpg">
                 <div class="text-block">
                     <h3>תעשיות ושירותים</h3>
                     <p>תחת חטיבת התעשיות והשירותים של פז פועלות מספר חברות בנות, המתמחות בפיתוח, ייצור ושיווק מוצרי
